--- a/frontend/src/pages/Home/ViewHome.scss
+++ b/frontend/src/pages/Home/ViewHome.scss
@@ -1,7 +1,11 @@
-.main-wrapper {
-  background-image: url("../../assets/home/background-home-desktop.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 100vh;
+.home-style {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.parent-home-style {
+  position: relative;
+  height: 70vh;
 }
