--- a/frontend/src/pages/Login/ViewLogin.scss
+++ b/frontend/src/pages/Login/ViewLogin.scss
@@ -5,14 +5,24 @@
   background-repeat: no-repeat;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.logo-place{
+  color:white;
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+  padding: 20px 0px 0px 55px;
+  max-width: 1440px;
+
 }
 
 .max-width-login-wrapper {
   max-width: 1440px;
   margin: auto;
-
 }
 
 .login-place {
